2.9.0:
  - Fix bug in get_version_py.
  - RND-268 Add Yank Command for reverting releases.
2.8.49: Stop logging executions with no errors.
2.8.48: Fix bug in plugin version validation.
2.8.47:
  - Update GA release to 7.0.0.
  - Throws an error if The version in plugin.yaml is greater than __verison__.py.
2.8.46: Throws an error if The version in plugin.yaml is greater than __verison__.py.
2.8.45: Fix issue in PR management.
2.8.44: automatically update changelog.txt when version.py is updated only in *-build branch
2.8.43:
  - Recursive cfy-lint auto fix and open PR.
  - Auto-update changelog.
2.8.42: Exit Plugins JSON job if not a plugin.
2.8.41: update version in plugin*.yaml from __version__.py'.
2.8.40: Improve Logging.
2.8.39: Bump version.
2.8.38: More cleanup of version string.
2.8.37: Strip whitespace from version string.
2.8.36: Update version string regex.
2.8.35: Search for __version__py instead of setuppy
2.8.34: Fix Bug in PR recognition.
2.8.33: Fix bug in pulls validations.
2.8.32: Get branch and repo
2.8.31: Fix bug in get branch.
2.8.30: Fix validate PR-branch.
2.8.29: RD-6902 Add progress bar for functions- get_objects_in_key, docker_load, download_file.
2.8.28: Add "RND" to regex in order to find new Jira ticket branches.
2.8.27: Use bytes.
2.8.26: Get rid of install data. Use constant for mgmt gist.
2.8.25: Get rid of install data. Use constant for mgmt gist.
2.8.24: Skip Bundle Upload
2.8.23:
  - Check Required IPs
  - Improve swap code for windows.
2.8.22: update version 6.4.2.
2.8.21: Handle windows host.
2.8.20: Handle windows host.
2.8.19: add delete_docker_manager_file remove the blueprint from tmp file.
2.8.18: Increase token timeout.
2.8.17: Update default manager version to 641.
2.8.16: Fix verify releases to check for correct org
2.8.15: Temporarily stop verifying v2 and 1_5.
2.8.14: Support create manager command.
2.8.13: Report which key not found in which list.
2.8.12: RD 3965 add some creds to env.