@@ -1,6 +1,7 @@
 2.9.0:
   - Fix bug in get_version_py.
   - RND-268 Add Yank Command for reverting releases.
+  - Verify that upload to pypi successful.
 2.8.49: Stop logging executions with no errors.
 2.8.48: Fix bug in plugin version validation.
 2.8.47:
